@@ -12,7 +12,7 @@ Simple Usage
 ------------
 [[WikiTicketCalendar([year,month,[showbuttons,[wiki_page_format,
                       [show_ticket_open_dates,[wiki_page_template,
-                      [query_expression,[list_condense]]]]]]])]]
+                      [query_expression,[list_condense,[cal_width]]]]]]]])]]
 
 Arguments
 ---------
@@ -26,12 +26,14 @@ show_ticket_open_dates = true/false, show also when a ticket was opened
 wiki_page_template = wiki template tried to create new page
 query_expression = TracQuery style ticket selection argument(s)
 list_condense = ticket count limit to switch off ticket summary display
+cal_width = calendar table width low limit 'min-width', and optional 'width'
+            setting for surrounding div triggered by prepending '+' to value
 
 Advanced Use
 ------------
 [[WikiTicketCalendar([nav=(0|1)],[wiki=<strftime-expression>],
     [cdate=(0|1)],[base=<wiki_page_template>],[query=<query_expression>],
-    [short=<integer-value>])]]
+    [short=<integer-value>],[width=[+]<valid-CSS-size>])]]
 
  - equivalent keyword-argument available for all but first two arguments
  - mixed use of keyword-arguments with simple arguments permitted,
@@ -52,3 +54,4 @@ Examples
  equivalent to [[WikiTicketCalendar(*,*,true,Talk-%Y-%m-%d,true,Talk)]]
 [[WikiTicketCalendar(wiki=Meeting-%Y-%m-%d,query=type=task&owner=wg1)]]
 [[WikiTicketCalendar(wiki=Meeting_%Y/%m/%d,short=6)]]
+[[WikiTicketCalendar(*,*,true,Meeting-%Y%m%d,width=+75%;)]]
